# Machine_Learning_Study_Arrangement

./: .gitignore  README.md  install_torch.txt  pyproject.toml
week_1/Data Structure/: README.md
week_1/ML history/: README.md
week_1/aihub_huggingface/: README.md
week_1/git explain/: README.md
week_2/1_shell_explain/: README.md
week_2/4_python_code_queue_stack_hash_tree_time_compare/: README.md  hash_visualize.py  stack_visualize.py
week_2/git_clone_test/: README.md
week_2/python_code_queue_stack_hash_tree_time_compare/: hash_visualize.py  queue_visualize.py  tree_visualize.py
week_2/python_venv_make/: README.md
week_2/random_forest/: README.md  Random_Forest.ipynb
week_2/shell_explain/: sample.py
week_2/supprot_vector_machine/: SVM_jupyter.ipynb
week_2/vscode_jupyter/: README.md  explain.ipynb
week_3/0_what_is_machine_learning/: README.md
week_3/1_neural_network/: neural.ipynb
week_3/2_back_progation/: back_propagation.ipynb
week_3/3_activation_and_loss_function/: activation_function.ipynb
week_3/4_pytorch_basic/: pytorch_basic.ipynb
week_3/5_Auto_Encoder_Variational_Auto_Encoder/: 1_AutoEncoder.ipynb  2_VariationalAutoEncoder.ipynb  AE_VAE.ipynb
week_3/6_convolution_neural_network/: 1_convolution_neural_network.ipynb
week_3/7_what_is_reinforcement_learning/: 1_reinforcement_learning.ipynb  2_cartpole.ipynb  linear_policy_bestW.pkl
week_3/8_GAN/: 1_GAN.ipynb  2_cVAE_cGAN.ipynb
week_4/1_What_is_seq2seq/: 1_What_is_seq_2_seq.ipynb
week_4/2_ngram_model/: 1_ngram_model.ipynb
week_4/3_Text_Embedding/: 1_text_embedding.ipynb
(+5 files in other folders)
