[tool.poetry]
name = "machine-learning-study"
version = "0.0.0"
description = "ml_study_package_manage"
authors = ["Con.kara"]
license = "No License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.7,<4.0.0"
pygame = "^2.6.1"
scikit-learn = "^1.7.2"
numpy = "<2"
gym = "^0.26.2"
pyglet = "^2.1.11"
gymnasium = {extras = ["classic-control"], version = "^1.2.2"}
datasets = "4.4.1"
kiwipiepy = "^0.22.2"
openpyxl = "^3.1.5"
sentencepiece = "^0.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
